assert-struct/tests/snapshots/nested__nested_comparison.snap
---
source: assert-struct/tests/nested.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/nested_errors/nested_comparison.rs:25:18
   |
25 |             age: >= 18,
   |                  ^^^^^ got 17
